--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -164,8 +164,11 @@
         <Canvas Width="74">
             <Label Content="Volume" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Width="64" HorizontalContentAlignment="Center"></Label>
             <Slider Name="MasterVolumeSlider" Orientation="Vertical" Height="300" Width="29" Maximum="100" HorizontalAlignment="Left" TickFrequency="3" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Canvas.Left="25" Canvas.Top="22" ValueChanged="MasterVolumeSlider_ValueChanged" VerticalAlignment="Center"></Slider>
-            <Button Name="MuteButton" Content="Mute" HorizontalAlignment="Left" Canvas.Top="329" VerticalAlignment="Top" Height="34" Width="64" Canvas.Left="1" Click="MuteButton_Click" FontWeight="Bold"></Button>
-            <Label Name="MasterVolumeLevelLabel" FontWeight="Bold" Content="100%" HorizontalAlignment="Center" Height="35" VerticalAlignment="Top" Canvas.Top="364" Canvas.Left="2" HorizontalContentAlignment="Center" Width="61" FontSize="20"></Label>
+            <Button Name="VolumeUpButton" Content="+" HorizontalAlignment="Left" Canvas.Top="333" VerticalAlignment="Center" Height="34" Width="36" Click="VolumeUpButton_Click" FontWeight="Bold"/>
+            <Button Name="VolumeDownButton" Content="-" HorizontalAlignment="Left" Canvas.Top="333
+                    " VerticalAlignment="Center" Height="34" Width="36" Canvas.Left="39" Click="VolumeDownButton_Click" FontWeight="Bold"></Button>
+            <Button Name="MuteButton" Content="Mute" HorizontalAlignment="Left" Canvas.Top="378" VerticalAlignment="Top" Height="34" Width="74" Click="MuteButton_Click" FontWeight="Bold"/>
+            <Label Name="MasterVolumeLevelLabel" FontWeight="Bold" Content="100%" HorizontalAlignment="Left" Height="35" VerticalAlignment="Top" Canvas.Top="417" Canvas.Left="1" HorizontalContentAlignment="Center" Width="71" FontSize="20"></Label>
         </Canvas>
         <Canvas Width="360" HorizontalAlignment="Left">
             <ListView x:Name="FullSongsListView" Loaded="FullSongsListView_Loaded" MouseDoubleClick="ListView_MouseDoubleClick" Height="679" Width="336" Canvas.Top="29" Canvas.Left="10" HorizontalAlignment="Center" VerticalAlignment="Top">
